# mpfs-hal

./: .gitignore  .gitmodules  Cargo.toml  README.md  mpfs-hal.code-workspace
dpi-display/: Cargo.toml  README.md
dpi-display/examples/: Cargo.toml
dpi-display/gateware/: test
dpi-display/gateware/DPI_DISPLAY/: ADD_CAPE.tcl
dpi-display/gateware/DPI_DISPLAY/HDL/: CAPE.v  display.v  spi.v
dpi-display/gateware/DPI_DISPLAY/constraints/: cape.pdc
dpi-display/gateware/testbench/: axi4_read_from_file.v  display_sim.cpp  display_sim.v  display_tb.v  helpers.v  pixel_data.mem
dpi-display/src/: embedded_graphics.rs  lib.rs
examples/: Cargo.toml  image-conf.yaml
examples/.cargo/: config.toml
hss-tty-flasher/: Cargo.toml  README.md
hss-tty-flasher/src/: drives.rs  image_gen.rs  main.rs
mpfs-hal/: Cargo.toml  README.md
mpfs-hal-embassy/: Cargo.toml  README.md
mpfs-hal-embassy/src/: executor.rs  lib.rs  qspi.rs  sd.rs  time_driver.rs
mpfs-hal-embassy/src/usb/: common.rs  device.rs  host.rs  mod.rs
mpfs-hal-procmacros/: Cargo.toml  README.md
mpfs-hal-procmacros/src/: lib.rs
mpfs-hal/src/: alloc.rs  critical_section_impl.rs  ethernet.rs  gpio.rs  lib.rs  log.rs  logger.rs  mutex.rs  peripheral.rs  print.rs  qspi.rs  spi.rs  uart.rs
mpfs-hal/src/usb/: device.rs  host.rs  mod.rs
mpfs-pac/: Cargo.toml  README.md  build.rs  linker-lower.ld  linker-upper.ld  linker.ld
mpfs-pac/mpfs-platform/: rust-support.c  wrapper.h
mpfs-pac/mpfs-platform/boards/beaglev-fire/fpga_design/design_description/: BEAGLEV_FIRE_MSS.cfg  BEAGV_FIRE_MSS.cfg  MPFS_BEAGLEV_FIRE_MSS_Baremetal.xml
mpfs-pac/mpfs-platform/boards/beaglev-fire/fpga_design_config/: fpga_design_config.h
mpfs-pac/mpfs-platform/boards/beaglev-fire/fpga_design_config/ddr/: hw_ddrc.h
mpfs-pac/mpfs-platform/boards/beaglev-fire/fpga_design_config/general/: hw_gen_peripherals.h
mpfs-pac/mpfs-platform/boards/beaglev-fire/fpga_design_config/io/: hw_mssio_mux.h  hw_mssio_mux_alternate.h
mpfs-pac/mpfs-platform/boards/beaglev-fire/platform_config/mpfs_hal_config/: mss_sw_config.h
mpfs-pac/mpfs-platform/platform/drivers/fpga_ip/CoreI2C/: core_i2c.c  core_i2c.h
mpfs-pac/mpfs-platform/platform/drivers/mss/mss_mmuart/: mss_uart.c  mss_uart.h
mpfs-pac/mpfs-platform/platform/drivers/mss/mss_spi/: mss_spi.c
mpfs-pac/scripts/: regenerate-board-headers.sh
mpfs-pac/src/: clint.rs  encoding.rs  ethernet.rs  gpio.rs  lib.rs  qspi.rs  spi.rs  sysreg.rs  timer.rs  uart.rs  usb.rs
