[workspace]
resolver = "2"
members = [
    "mpfs-hal",
    "mpfs-pac",
    "mpfs-hal-procmacros",
    "mpfs-hal-embassy",
    "examples",
]

exclude = ["hss-tty-flasher"]

[workspace.dependencies]
mpfs-pac = { path = "./mpfs-pac", version = "0.2.0" }
mpfs-hal = { path = "./mpfs-hal", version = "0.2.0" }
mpfs-hal-embassy = { path = "./mpfs-hal-embassy", version = "0.1.0" }
mpfs-hal-procmacros = { path = "./mpfs-hal-procmacros", version = "0.2.0" }

embassy-embedded-hal = { version = "0.3" }
embassy-executor = { version = "0.7" }
embassy-net-driver = { version = "0.2" }
embassy-usb-driver = { version = "0.1" }
embassy-time = { version = "0.4" }
embassy-sync = { version = "0.6" }

embedded-alloc = { version = "0.6" }
embedded-io = { version = "0.6" }
embedded-io-async = { version = "0.6" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"

critical-section = { version = "1.2", features = ["restore-state-u8"] }
log = { version = "0.4" }
static_cell = { version = "2.1" }
