[workspace]
resolver = "2"
members = [
    "mpfs-hal",
    "mpfs-pac",
    "mpfs-hal-procmacros",
    "mpfs-hal-embassy",
    "examples",
]

exclude = ["hss-tty-flasher"]

[workspace.dependencies]
mpfs-pac = { path = "./mpfs-pac", version = "0.3.0" }
mpfs-hal = { path = "./mpfs-hal", version = "0.3.0" }
mpfs-hal-embassy = { path = "./mpfs-hal-embassy", version = "0.1.0" }
mpfs-hal-procmacros = { path = "./mpfs-hal-procmacros", version = "0.2.0" }

# embassy-embedded-hal = { version = "0.3" }
embassy-embedded-hal = { path = "../external/embassy/embassy-embedded-hal" }
# embassy-executor = { version = "0.7" }
embassy-executor = { path = "../external/embassy/embassy-executor" }
# embassy-futures = { version = "0.1" }
embassy-futures = { path = "../external/embassy/embassy-futures" }
# embassy-net = { version = "0.6" }
embassy-net = { path = "../external/embassy/embassy-net" }
# embassy-net-driver = { version = "0.2" }
embassy-net-driver = { path = "../external/embassy/embassy-net-driver" }
# embassy-usb-driver = { version = "0.1" }
embassy-usb-driver = { path = "../external/embassy/embassy-usb-driver" }
# embassy-time = { version = "0.4" }
embassy-time = { path = "../external/embassy/embassy-time" }
# embassy-time-driver = { version = "0.2" }
embassy-time-driver = { path = "../external/embassy/embassy-time-driver" }
# embassy-time-queue-utils = { version = "0.1" }
embassy-time-queue-utils = { path = "../external/embassy/embassy-time-queue-utils" }
# embassy-sync = { version = "0.6" }
embassy-sync = { path = "../external/embassy/embassy-sync" }
# embassy-usb = { version = "0.4" }
# embassy-usb = { git = "https://github.com/AlexCharlton/embassy", branch = "usb-host" }
embassy-usb = { path = "../external/embassy/embassy-usb" }

embedded-alloc = { version = "0.6" }
embedded-io = { version = "0.6" }
embedded-io-async = { version = "0.6" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"

aligned = "0.4"
critical-section = { version = "1.2", features = ["restore-state-u8"] }
log = { version = "0.4" }
static_cell = { version = "2.1" }
