[workspace]
resolver = "2"
members = [
    "mpfs-hal",
    "mpfs-pac",
    "mpfs-hal-procmacros",
    "mpfs-hal-embassy",
    "examples",
]

exclude = ["hss-tty-flasher"]

[workspace.dependencies]
mpfs-pac = { path = "./mpfs-pac", version = "0.4.0" }
mpfs-hal = { path = "./mpfs-hal", version = "0.4.1", default-features = false }
mpfs-hal-embassy = { path = "./mpfs-hal-embassy", version = "0.2.0" }
mpfs-hal-procmacros = { path = "./mpfs-hal-procmacros", version = "0.3.0" }

embassy-embedded-hal = { version = "0.6" }
# embassy-embedded-hal = { path = "../external/embassy/embassy-embedded-hal" }
# embassy-embedded-hal = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-executor = { version = "0.10" }
# embassy-executor = { path = "../external/embassy/embassy-executor" }
# embassy-executor = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-futures = { version = "0.1" }
# embassy-futures = { path = "../external/embassy/embassy-futures" }
# embassy-futures = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-net = { version = "0.9" }
# embassy-net = { path = "../external/embassy/embassy-net" }
# embassy-net = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-net-driver = { version = "0.2" }
# embassy-net-driver = { path = "../external/embassy/embassy-net-driver" }
# embassy-net-driver = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-sync = { version = "0.8" }
# embassy-sync = { path = "../external/embassy/embassy-sync" }
# embassy-sync = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-time = { version = "0.5" }
# embassy-time = { path = "../external/embassy/embassy-time" }
# embassy-time = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-time-driver = { version = "0.2" }
# embassy-time-driver = { path = "../external/embassy/embassy-time-driver" }
# embassy-time-driver = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-time-queue-utils = { version = "0.3" }
# embassy-time-queue-utils = { path = "../external/embassy/embassy-time-queue-utils" }
# embassy-time-queue-utils = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-usb = { version = "0.6" }
# embassy-usb = { path = "../external/embassy/embassy-usb" }
# embassy-usb = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-usb-driver = { version = "0.2" }
# embassy-usb-driver = { path = "../external/embassy/embassy-usb-driver" }
# embassy-usb-driver = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }
embassy-usb-host = { version = "0.1" }
# embassy-usb-host = { path = "../external/embassy/embassy-usb-host" }
# embassy-usb-host = { git = "https://github.com/AlexCharlton/embassy", branch = "main" }

embedded-alloc = { version = "0.6" }
embedded-io = { version = "0.6" }
embedded-io-async = { version = "0.6" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"

aligned = "0.4"
critical-section = { version = "1.2", features = ["restore-state-u8"] }
log = { version = "0.4" }
static_cell = { version = "2.1" }
