[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
mpfs-hal = { workspace = true, features = ["alloc", "print"] }
mpfs-hal-embassy = { workspace = true, features = [] }

critical-section = { workspace = true }
embassy-time = { workspace = true }
embassy-executor = { workspace = true, features = ["task-arena-size-8192"] }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
log = { workspace = true }

# SD example
aligned = "0.4"
block-device-adapters = { version = "0.2", git = "https://github.com/MabezDev/embedded-fatfs.git" }
embedded-fatfs = { version = "0.1", git = "https://github.com/MabezDev/embedded-fatfs.git", default-features = false, features = [
    "alloc",
    "log",
    "lfn",
] }
sdspi = { version = "0.1", git = "https://github.com/MabezDev/embedded-fatfs.git", features = [
    "log",
] }

embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-sync = { workspace = true }
mbr-nostd = "0.1"
static_cell = { workspace = true }
