[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
mpfs-hal = { workspace = true, features = ["alloc", "print"] }
mpfs-hal-embassy = { workspace = true, features = [] }

aligned = { workspace = true }
critical-section = { workspace = true }
embassy-time = { workspace = true }
embassy-executor = { workspace = true, features = ["task-arena-size-8192"] }
embassy-usb = "0.4"
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
log = { workspace = true }
midi-msg = { version = "0.8.0", default-features = false }
static_cell = { workspace = true }
usbd-hid = "0.8"

# TCP example
embassy-net = { version = "0.6", features = [
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "proto-ipv4",
    "proto-ipv6",
    "multicast",
] }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

# SD example
block-device-adapters = { version = "0.2", git = "https://github.com/MabezDev/embedded-fatfs.git" }
embedded-fatfs = { version = "0.1", git = "https://github.com/MabezDev/embedded-fatfs.git", default-features = false, features = [
    "alloc",
    "log",
    "lfn",
] }
sdspi = { version = "0.1", git = "https://github.com/MabezDev/embedded-fatfs.git", features = [
    "log",
] }

embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-futures = "0.1"
embassy-sync = { workspace = true }
mbr-nostd = "0.1"
