[package]
name = "hss-tty-flasher"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "TTY Flasher for PolarFire SoC with HSS bootloader"
repository = "https://github.com/AlexCharlton/mpfs-hal"
categories = ["embedded", "command-line-utilities"]
keywords = ["mpfs", "polarfire"]

[dependencies]
elf = "0.7"
serialport = "4.2"
crossterm = "0.27"
sysinfo = "0.32"
clap = { version = "4.5", features = ["derive"] }
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
] }
ymodem = { version = "0.1", git = "https://github.com/AlexCharlton/xymodem.rs" }
