[package]
name = "mpfs-hal-embassy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embassy integration for PolarFire SoC"
repository = "https://github.com/AlexCharlton/mpfs-hal"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mpfs", "polarfire", "embassy"]

[package.metadata.docs.rs]
default-target = "riscv64gc-unknown-none-elf"
features = []

[features]
default = ["beaglev-fire"]
debug-logs = ["mpfs-hal/debug-logs"]
beaglev-fire = ["mpfs-hal/beaglev-fire"]

[dependencies]
mpfs-hal = { version = "0.1", path = "../mpfs-hal", features = [] }
mpfs-hal-procmacros = { version = "0.1", path = "../mpfs-hal-procmacros", features = [
    "embassy",
] }

critical-section = { workspace = true }
embassy-executor = { workspace = true, features = ["executor-thread"] }
embassy-time = { workspace = true }
embassy-time-driver = { version = "0.2", features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = { version = "0.1" }
embassy-sync = { workspace = true }
embedded-hal = { workspace = true }
static_cell = { version = "2.1" }
