[package]
name = "mpfs-hal-embassy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embassy integration for PolarFire SoC"
repository = "https://github.com/AlexCharlton/mpfs-hal"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mpfs", "polarfire", "embassy"]

[package.metadata.docs.rs]
default-target = "riscv64gc-unknown-none-elf"
features = []

[features]
default = ["beaglev-fire"]
debug-logs = ["mpfs-hal/debug-logs"]
beaglev-fire = ["mpfs-hal/beaglev-fire"]

[dependencies]
mpfs-hal = { workspace = true, features = ["alloc"] }
mpfs-hal-procmacros = { workspace = true, features = ["embassy"] }

critical-section = { workspace = true }
embassy-executor = { workspace = true, features = ["executor-thread"] }
embassy-time = { workspace = true }
embassy-time-driver = { workspace = true, features = ["tick-hz-1_000_000"] }
embassy-time-queue-utils = { workspace = true }
embassy-sync = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
log = { workspace = true }
static_cell = { version = "2.1" }
