[package]
name = "mpfs-hal-embassy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embassy integration for PolarFire SoC"
repository = "https://github.com/AlexCharlton/mpfs-hal"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mpfs", "polarfire", "embassy"]

[package.metadata.docs.rs]
default-target = "riscv64gc-unknown-none-elf"
features = []

[features]
default = ["beaglev-fire", "usb-host", "usb-device", "alloc"]
debug-logs = ["mpfs-hal/debug-logs"]
beaglev-fire = ["mpfs-hal/beaglev-fire"]
usb-host = []
usb-device = []
alloc = ["mpfs-hal/alloc"]

[dependencies]
mpfs-hal = { workspace = true }
mpfs-hal-procmacros = { workspace = true, features = ["embassy"] }

aligned = { workspace = true }
critical-section = { workspace = true }
embassy-executor = { workspace = true, features = ["executor-thread"] }
embassy-futures = { workspace = true }
embassy-time = { workspace = true }
embassy-time-driver = { workspace = true, features = ["tick-hz-600_000_000"] }
embassy-time-queue-utils = { workspace = true }
embassy-sync = { workspace = true }
embassy-usb-driver = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
log = { workspace = true }
static_cell = { version = "2.1" }
