[package]
name = "mpfs-hal-procmacros"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Procedural macros for mpfs-hal"
repository = "https://github.com/AlexCharlton/mpfs-hal"

[package.metadata.docs.rs]
default-target = "riscv64gc-unknown-none-elf"
features = ["embassy"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true

[features]
embassy = []
