[package]
name = "mpfs-hal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Hardware Abstraction Layer for PolarFire SoC"
repository = "https://github.com/AlexCharlton/mpfs-hal"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mpfs", "polarfire", "hal", "embedded-hal"]

[package.metadata.docs.rs]
default-target = "riscv64gc-unknown-none-elf"
features = ["alloc", "print", "log", "beaglev-fire"]

[features]
default = ["alloc", "print", "log", "log-colors", "beaglev-fire"]
debug-logs = ["print"]
log = ["print", "dep:log"]
log-colors = []
alloc = ["embedded-alloc", "embedded-io/alloc"]
print = []
beaglev-fire = ["mpfs-pac/beaglev-fire"]

[dependencies]
mpfs-pac = { version = "0.1", path = "../mpfs-pac" }
mpfs-hal-procmacros = { version = "0.1", path = "../mpfs-hal-procmacros" }
log = { workspace = true, optional = true }
paste = "1.0"

critical-section = { workspace = true }
embassy-embedded-hal = { workspace = true }
embedded-alloc = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io = { workspace = true }
riscv = "0.12"
