[package]
name = "mpfs-hal"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Hardware Abstraction Layer for PolarFire SoC"
repository = "https://github.com/AlexCharlton/mpfs-hal"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mpfs", "polarfire", "hal", "embedded-hal"]

[package.metadata.docs.rs]
default-target = "riscv64gc-unknown-none-elf"
features = []

[features]
default = ["alloc", "print", "log", "log-colors", "beaglev-fire"]
debug-logs = ["print"]
log = ["print", "dep:log"]
log-colors = []
alloc = ["embedded-alloc", "embedded-io/alloc"]
print = []
beaglev-fire = ["mpfs-pac/beaglev-fire"]

[dependencies]
mpfs-pac = { workspace = true }
mpfs-hal-procmacros = { workspace = true }

aligned = { workspace = true }
critical-section = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-net-driver = { workspace = true }
embassy-usb-driver = { workspace = true }
embedded-alloc = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io = { workspace = true }
log = { workspace = true, optional = true }
paste = "1.0"
riscv = "0.12"
