[package]
name = "mpfs-hal"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Hardware Abstraction Layer for PolarFire SoC"
repository = "https://github.com/AlexCharlton/mpfs-hal"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["mpfs", "polarfire", "hal", "embedded-hal"]

[package.metadata.docs.rs]
default-target = "riscv64gc-unknown-none-elf"
features = []

[features]
default = [
    "alloc",
    "print",
    "log",
    "log-colors",
    "beaglev-fire",
    "beaglev-fire-default-cape",
]
debug-logs = ["print"]
log = ["print", "dep:log", "embassy-sync", "alloc"]
log-colors = []
alloc = ["embedded-alloc", "embedded-io/alloc"]
print = []
beaglev-fire = ["mpfs-pac/beaglev-fire"]
# Capes
beaglev-fire-default-cape = ["beaglev-fire"]
beaglev-fire-gpio-cape = ["beaglev-fire"]
beaglev-fire-no-cape = ["beaglev-fire"]

[dependencies]
mpfs-pac = { workspace = true }
mpfs-hal-procmacros = { workspace = true }

critical-section = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-net-driver = { workspace = true }
embassy-sync = { workspace = true, optional = true }
embedded-alloc = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
log = { workspace = true, optional = true }
mutually_exclusive_features = "0.1.0"
paste = "1.0"
riscv = "0.12"
