[package]
name = "mpfs-pac"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Peripheral Access Crate for PolarFire SoC"
repository = "https://github.com/AlexCharlton/mpfs-hal"
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]
keywords = ["mpfs", "polarfire", "pac"]
build = "build.rs"

[lib]
test = false
bench = false

[package.metadata.docs.rs]
default-target = "riscv64gc-unknown-none-elf"
features = []

[features]
default = ["beaglev-fire"]
beaglev-fire = ["upper-memory-layout"]
# Enable the 38-bit address range. Only the 38-bit address range supports more than 1GB of RAM.
upper-memory-layout = []

[dependencies]
riscv = "0.12"

[build-dependencies]
bindgen = "0.70"
cc = "1.0"
walkdir = "2.4"
