[package]
name = "dpi-display-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
mpfs-hal = { path = "../../mpfs-hal", default-features = false, features = [
    "alloc",
    "print",
    "log",
    "log-colors",
    "beaglev-fire-no-cape",
] }
mpfs-hal-embassy = { path = "../../mpfs-hal-embassy" }
dpi-display = { path = "../" }

embassy-time = { path = "../../../external/embassy/embassy-time" }
embassy-executor = { path = "../../../external/embassy/embassy-executor" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
log = { version = "0.4" }
